Downgrade to Java 8 to be compatible with Tableau Server